maximum css fixed

--- a/src/app/features/admin-management/product-components/delete-product/delete-product.component.html
+++ b/src/app/features/admin-management/product-components/delete-product/delete-product.component.html
@@ -1,6 +1,6 @@
 <app-jumbotron [Heading]="'admin.main_heading.delete_product'"></app-jumbotron>
-<div class="delete-container">
-  <div class="delete-input">
+<div class="big-input-container">
+  <div class="big-delete-input">
     <app-big-input
       [placeholder]="'admin.productform.enter_the_productid'"
       (keyup)="onInputChanged($event.target.value)"
