--- a/src/app/features/admin-management/user-components/block-user/block-user.component.html
+++ b/src/app/features/admin-management/user-components/block-user/block-user.component.html
@@ -1,6 +1,6 @@
 <app-jumbotron [Heading]="'admin.main_heading.block_user'"></app-jumbotron>
-<div class="delete-container">
-  <div class="delete-input">
+<div class="big-input-container">
+  <div class="big-delete-input">
     <app-big-input
       [placeholder]="'admin.productform.enter_the_userid'"
       (keyup)="onInputChanged($event.target.value)"
