--- a/src/app/features/user-management/profile/buy-list/buy-list.component.html
+++ b/src/app/features/user-management/profile/buy-list/buy-list.component.html
@@ -1,5 +1,5 @@
-<div class="delete-container">
-  <div class="delete-input">
+<div class="big-input-container">
+  <div class="big-delete-input">
     <app-big-input
       [placeholder]="'user.form_heading.i_am_going_to_buy_a'"
       (keyup)="onInputChanged($event.target.value)"
