--- a/src/app/shared/filter-input/filter-input.component.scss
+++ b/src/app/shared/filter-input/filter-input.component.scss
@@ -2,14 +2,22 @@
   display: flex;
   justify-content: flex-end;
   margin: 20px 43px 0px 0px;
+  font-size: 12px;
   .mat-form-field {
     width: 40%;
   }
   .filter-btn {
     height: 48px;
     position: relative;
-    min-width: 40px;
-    top: 4px;
+    min-width: 25px;
+    width: 40px;
+    top: 3px;
+    max-height: 43px;
     border-radius: 4px !important;
+
+    .mat-icon {
+      margin-left: -7px;
+      font-size: 21px;
+    }
   }
 }
