--- a/src/app/features/admin-management/product-components/update-product/update/update.component.scss
+++ b/src/app/features/admin-management/product-components/update-product/update/update.component.scss
@@ -11,6 +11,7 @@
       -moz-box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.1);
       box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14),
         0 3px 14px 2px rgba(0, 0, 0, 0.12);
+      transition-duration: 500ms;
     }
     .table-full-width {
       width: 100%;
