--- a/src/app/features/admin-management/user-components/view-users/view-users.component.html
+++ b/src/app/features/admin-management/user-components/view-users/view-users.component.html
@@ -16,20 +16,18 @@
         </div>
       </div> -->
       <div class="u-margin-top-15">
-        <div>
-          <mat-form-field class="search-block" floatLabel="never">
-            <input
-              autocomplete="off"
-              matInput
-              autocomplete="off"
-              (keyup)="applyFilter($event)"
-              placeholder="{{'admin.table.search' | translate}}"
-            />
-            <mat-icon matSuffix style="font-size: 18px;">search</mat-icon>
-          </mat-form-field>
-        </div>
+        <mat-form-field class="search-block" floatLabel="never">
+          <input
+            autocomplete="off"
+            matInput
+            autocomplete="off"
+            (keyup)="applyFilter($event)"
+            placeholder="{{'admin.table.search' | translate}}"
+          />
+          <mat-icon matSuffix style="font-size: 18px;">search</mat-icon>
+        </mat-form-field>
         <mat-divider></mat-divider>
-        <div>
+        <ng-container>
           <app-spinner [loading]="dataLoading"></app-spinner>
           <table mat-table [dataSource]="dataSource" matSort multiTemplateDataRows>
             <ng-container matColumnDef="status">
@@ -49,7 +47,7 @@
                 {{"admin.table.profile_pic" | translate}}
               </th>
               <td mat-cell *matCellDef="let element">
-                <img style="width: 40px;height: 40px;" src="{{ element.profilepic }}" />
+                <img class="small-size-image" src="{{ element.profilepic }}" />
               </td>
             </ng-container>
             <ng-container matColumnDef="name">
@@ -89,12 +87,12 @@
             <tr
               mat-row
               *matRowDef="let element; columns: columnsToDisplay"
-              class="example-element-row"
+              class="user-element-row"
             ></tr>
           </table>
 
           <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-        </div>
+        </ng-container>
       </div>
     </mat-card-content>
   </mat-card>
