--- a/src/app/features/user-management/profile/buy-list/buy-list.component.scss
+++ b/src/app/features/user-management/profile/buy-list/buy-list.component.scss
@@ -1,6 +1,6 @@
-.delete-container {
-  // min-height: 501px;
-  .delete-input {
+.big-input-container {
+  min-height: 450px;
+  .big-delete-input {
     padding: 30px 300px 0px 300px;
     .btn {
       margin-right: 10px;
