--- a/src/app/layout/homepage/page-content/category-card/category-card.component.scss
+++ b/src/app/layout/homepage/page-content/category-card/category-card.component.scss
@@ -1,5 +1,5 @@
 .space-medium {
-  padding: 24px 20px 0px 20px;
+  padding: 24px 85px 0px 85px;
   .containerr {
     width: 100%;
     padding-right: 15px;
@@ -23,6 +23,7 @@
           box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14),
             0 3px 14px 2px rgba(0, 0, 0, 0.12);
           transform: translateY(-4px);
+          transition-duration: 500ms;
         }
         .display-logo {
           margin-bottom: 30px;
