--- a/src/app/shared/big-input/big-input/big-input.component.scss
+++ b/src/app/shared/big-input/big-input/big-input.component.scss
@@ -10,6 +10,7 @@
     box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.24),
       0 3px 14px 2px rgba(0, 0, 0, 0.22);
     transform: translateY(-2px);
+    transition-duration: 500ms;
   }
 
   input {
