--- a/src/app/shared/list-products/list-products.component.scss
+++ b/src/app/shared/list-products/list-products.component.scss
@@ -48,6 +48,7 @@
           //   0 8px 10px 1px #683ab76b,
           //   0 3px 14px 2px #683ab767;
           transform: translateY(-2px);
+          transition-duration: 500ms;
         }
         .wishlist-icon {
           position: absolute;
@@ -61,6 +62,9 @@
           display: flex;
           justify-content: center;
           align-items: center;
+          .mat-raised-button {
+            line-height: 30px !important;
+          }
         }
         .product-img {
           min-height: 135px;
