--- a/src/assets/css/shared-common.scss
+++ b/src/assets/css/shared-common.scss
@@ -34,3 +34,11 @@
 .dimmed {
   opacity: 0.2;
 }
+//--------------------------- Admin Management Big Inputs ------------------------------
+
+.big-input-container {
+  min-height: 415px;
+  .big-delete-input {
+    padding: 150px 150px 0px 150px;
+  }
+}
