--- a/src/assets/css/white-component.scss
+++ b/src/assets/css/white-component.scss
@@ -217,3 +217,91 @@
     width: 30%;
   }
 }
+//----------------------- Tables Used in --------------------------------------
+//   1.Admin View User
+//   2.Admin view products
+.outer-wrap {
+  padding: 40px 80px 53px 80px;
+  min-height: 415px;
+  .display-products-card {
+    border-radius: 10px;
+    // box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+    //   0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+    box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.1);
+    &:hover {
+      // -webkit-box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.75);
+      // -moz-box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14),
+        0 3px 14px 2px rgba(0, 0, 0, 0.12);
+      transition-duration: 500ms;
+    }
+    .side-icon {
+      padding-right: 30px;
+    }
+    table {
+      width: 100%;
+      .small-size-image {
+        width: 40px;
+        height: 40px;
+      }
+      .example-element-detail {
+        overflow: hidden;
+        display: flex;
+        .example-element-diagram {
+          min-width: 115px;
+          border: 2px solid black;
+          padding: 8px;
+          font-weight: lighter;
+          margin: 8px 0;
+          height: 124px;
+          .large-image {
+            width: 100px;
+            height: 100px;
+          }
+        }
+
+        .example-element-description {
+          padding: 16px;
+
+          .example-element-description-attribution {
+            opacity: 0.5;
+          }
+        }
+      }
+      tr.example-detail-row {
+        height: 0;
+      }
+      tr.example-element-row:not(.example-expanded-row) {
+        &:hover {
+          background: whitesmoke;
+        }
+        &:active {
+          background: #efefef;
+        }
+      }
+
+      .example-element-row td {
+        border-bottom-width: 0;
+      }
+      .user-element-row {
+        &:hover {
+          background: whitesmoke;
+        }
+      }
+
+      .example-element-symbol {
+        font-weight: bold;
+        font-size: 40px;
+        line-height: normal;
+      }
+    }
+    .mat-raised-button {
+      min-width: 45px !important;
+      line-height: 30px !important;
+      padding: 0 10px !important;
+    }
+    .search-block {
+      width: 25%;
+    }
+  }
+}
