again common css fixed

--- a/src/assets/css/shared-common.scss
+++ b/src/assets/css/shared-common.scss
@@ -42,3 +42,12 @@
     padding: 150px 150px 0px 150px;
   }
 }
+//--------------------------- Scroll Button f------------------------------
+.c-go-to-top {
+  position: fixed !important;
+  cursor: pointer !important;
+  box-shadow: 0 0 22px #00000063 !important;
+  .mat-icon {
+    margin: -15px !important;
+  }
+}
