--- a/src/assets/css/white-component.scss
+++ b/src/assets/css/white-component.scss
@@ -1,3 +1,23 @@
+//--------------------------- Main Wrapper Used in ------------------------------
+//   1.Adminpage
+//   2.Userpage
+.c-wrapper {
+  padding-top: 0 !important;
+  // background-color: #1397ca9e;
+  // background-color: #232f3e;
+  // background-color: rgb(40, 53, 147);
+  // background-color: black;
+  // color: white;
+  width: 100%;
+  height: 100%;
+  box-shadow: 0 8px 0 rgba(0, 0, 0, 0.14), 0 0 15px rgba(0, 0, 0, 0.35);
+  .sidenav-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+  }
+}
+
 // -----------------------Table Used in --------------------------------------------
 //   1.Cart
 //   2.Wishlist
@@ -220,6 +240,7 @@
 //----------------------- Tables Used in --------------------------------------
 //   1.Admin View User
 //   2.Admin view products
+
 .outer-wrap {
   padding: 40px 80px 53px 80px;
   min-height: 415px;
@@ -302,6 +323,74 @@
     }
     .search-block {
       width: 25%;
+    }
+  }
+}
+//----------------------- Cards Used in --------------------------------------
+//   1.Admin HomePage
+//   2.User HomePage
+
+.space-medium {
+  padding: 24px 85px 0px 85px;
+  .containerr {
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+    .roww {
+      display: flex;
+      flex-wrap: wrap;
+      margin-right: -15px;
+      margin-left: -15px;
+      .showcase-block {
+        margin-bottom: 30px;
+        min-height: 100%;
+        border-radius: 10px;
+        background-color: #e8eaec;
+        padding: 30px 30px 0px 30px;
+        text-align: center;
+        &:hover {
+          background-color: #fff;
+          box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14),
+            0 3px 14px 2px rgba(0, 0, 0, 0.12);
+          transform: translateY(-4px);
+          transition-duration: 500ms;
+        }
+        .display-logo {
+          margin-bottom: 30px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          .display-text {
+            font-size: 20px;
+            &:hover {
+              // color: #fb730f !important;
+              cursor: pointer;
+            }
+          }
+        }
+        .showcase-img {
+          padding-top: 18px;
+          .small-image {
+            width: 100%;
+            height: 100%;
+            max-height: 150px;
+            max-width: 150px;
+          }
+        }
+        a {
+          text-decoration: none;
+          color: #1c1e1e;
+          -webkit-transition: all 0.3s;
+          -moz-transition: all 0.3s;
+          transition: all 0.3s;
+          &:hover {
+            text-decoration: none;
+            color: rgb(103, 58, 183);
+          }
+        }
+      }
     }
   }
 }
