--- a/src/app/shared/jumbotron/jumbotron.component.scss
+++ b/src/app/shared/jumbotron/jumbotron.component.scss
@@ -2,7 +2,7 @@
   height: 70px !important;
   display: block;
   background-size: 240px;
-  background-image: url(../../../assets/images/page-header-pattern.png);
+  background-image: url('../../../assets/images/page-header-pattern.png');
   .jumbotron-heading {
     font-size: 30px !important;
     padding-top: 20px;
