--- a/src/app/shared/product-carousel/product-carousel.component.scss
+++ b/src/app/shared/product-carousel/product-carousel.component.scss
@@ -87,7 +87,7 @@ h2::after {
   width: 40px;
   background: none;
   margin: auto 0;
-  background: rgba(0, 0, 0, 0.2);
+  // background: rgba(0, 0, 0, 0.2);
 }
 .carousel .carousel-control i {
   font-size: 30px;
