--- a/src/app/shared/quickview/quickview.component.html
+++ b/src/app/shared/quickview/quickview.component.html
@@ -1,5 +1,5 @@
 <div>
-  <mat-card class="cardd">
+  <mat-card class="quick-view-card">
     <div fxLayout="row" fxLayoutAlign="start">
       <div fxFlex="50%">
         <div class="preview-pic tab-content">
