--- a/src/app/features/cart-management/checkout/billing/billing.component.html
+++ b/src/app/features/cart-management/checkout/billing/billing.component.html
@@ -139,12 +139,12 @@
     </mat-card-content>
   </mat-card>
 </div>
-<!-- <div class="checkout-button">
+<!-- <div class="centre-button">
   <button mat-raised-button color="warn" [disabled]="billingform.invalid" (click)="goForward()">
     {{"user.form.confirm_and_continue" | translate}}
   </button>
 </div> -->
-<mat-toolbar color="primary" class="c-bottom-action-bar u-text-right checkout-button">
+<mat-toolbar color="primary" class="c-bottom-action-bar u-text-right centre-button">
   <button mat-raised-button color="warn" [disabled]="billingform.invalid" (click)="goForward()">
     {{"user.form.confirm_and_continue" | translate}}
   </button>
