--- a/src/app/features/cart-management/checkout/payment/payment.component.scss
+++ b/src/app/features/cart-management/checkout/payment/payment.component.scss
@@ -1,326 +1,256 @@
-.checkout-button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
 .payment-container {
   width: 100%;
   height: 100%;
-  padding: 20px 15px 20px 45px;
-  .roww {
-    display: flex;
-    flex-wrap: wrap;
-  }
-  .payment-list {
-    font-family: 'Nunito Sans', sans-serif;
-    .col-lg-6 {
-      flex: 0 0 50%;
-      max-width: 35%;
-      .payment-card {
-        margin-left: 30px;
-        min-width: 700px;
-        height: 100%;
+  padding: 20px 45px 20px 45px;
+  .card-form {
+    .payment-card {
+      height: 100%;
+      width: 100%;
+      border-radius: 10px;
+      box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.1);
+      &:hover {
+        -webkit-box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.75);
+        -moz-box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14),
+          0 3px 14px 2px rgba(0, 0, 0, 0.12);
+      }
+      .table-full-width {
         width: 100%;
-        border-radius: 10px;
-        box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.1);
-        &:hover {
-          -webkit-box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.75);
-          -moz-box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.1);
-          box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14),
-            0 3px 14px 2px rgba(0, 0, 0, 0.12);
+        td {
+          padding-right: 25px;
         }
-        .table-full-width {
-          width: 100%;
-          td {
-            padding-right: 25px;
-          }
+      }
+      .mat-form-field {
+        width: 100%;
+      }
+    }
+  }
+  .container {
+    width: 100%;
+    max-width: 400px;
+    max-height: 251px;
+    height: 54vw;
+    padding: 20px;
+    -webkit-perspective: 800px;
+    perspective: 800px;
+    .creditcard {
+      -webkit-transform-style: preserve-3d;
+      transform-style: preserve-3d;
+      -webkit-transform: transform 1s;
+      -ms-transform: transform 1s;
+      transform: transform 1s;
+      width: 100%;
+      max-width: 400px;
+      -webkit-transition: -webkit-transform 0.6s;
+      transition: transform 0.6s;
+      transition: transform 0.6s, -webkit-transform 0.6s;
+      cursor: pointer;
+      .lightcolor,
+      .darkcolor {
+        -webkit-transition: fill 0.5s;
+        transition: fill 0.5s;
+      }
+
+      .lightblue {
+        fill: #03a9f4;
+      }
+
+      .lightbluedark {
+        fill: #0288d1;
+      }
+
+      .red {
+        fill: #ef5350;
+      }
+
+      .reddark {
+        fill: #d32f2f;
+      }
+
+      .purple {
+        fill: #ab47bc;
+      }
+
+      .purpledark {
+        fill: #7b1fa2;
+      }
+
+      .cyan {
+        fill: #26c6da;
+      }
+
+      .cyandark {
+        fill: #0097a7;
+      }
+
+      .green {
+        fill: #66bb6a;
+      }
+      .greendark {
+        fill: #388e3c;
+      }
+
+      .lime {
+        fill: #d4e157;
+      }
+
+      .limedark {
+        fill: #afb42b;
+      }
+
+      .yellow {
+        fill: #ffeb3b;
+      }
+
+      .yellowdark {
+        fill: #f9a825;
+      }
+
+      .orange {
+        fill: #ff9800;
+      }
+
+      .orangedark {
+        fill: #ef6c00;
+      }
+
+      .grey {
+        fill: #bdbdbd;
+      }
+
+      .greydark {
+        fill: #616161;
+      }
+      .front {
+        -webkit-transform: rotateY(0deg);
+        -ms-transform: rotateY(0deg);
+        transform: rotateY(0deg);
+        .st2 {
+          fill: #ffffff;
         }
-        .mat-form-field {
-          width: 100%;
+        .st3 {
+          font-family: 'Source Code Pro', monospace;
+          font-weight: 600;
         }
+        .st4 {
+          font-size: 54.7817px;
+        }
+        .st5 {
+          font-family: 'Source Code Pro', monospace;
+          font-weight: 400;
+        }
+        .st6 {
+          font-size: 33.1112px;
+        }
+        .st7 {
+          opacity: 0.6;
+          fill: #ffffff;
+        }
+        .st8 {
+          font-size: 24px;
+        }
+        .st9 {
+          font-size: 36.5498px;
+        }
+        .st10 {
+          font-family: 'Source Code Pro', monospace;
+          font-weight: 300;
+        }
+        .st11 {
+          font-size: 16.1716px;
+        }
+        .st12 {
+          fill: #4c4c4c;
+        }
+      }
+      .back {
+        // -webkit-transform: rotateY(-180deg);
+        // -ms-transform: rotateY(-180deg);
+        // transform: rotateY(-180deg);
+        -webkit-transform: rotateY(180deg);
+        transform: rotateY(180deg);
+        .st0 {
+          fill: none;
+          stroke: #0f0f0f;
+          stroke-miterlimit: 10;
+        }
+        .st2 {
+          fill: #111111;
+        }
+
+        .st3 {
+          fill: #f2f2f2;
+        }
+
+        .st4 {
+          fill: #d8d2db;
+        }
+
+        .st5 {
+          fill: #c4c4c4;
+        }
+
+        .st6 {
+          font-family: 'Source Code Pro', monospace;
+          font-weight: 400;
+        }
+        .st7 {
+          font-size: 27px;
+        }
+
+        .st8 {
+          opacity: 0.6;
+        }
+        .st9 {
+          fill: #ffffff;
+        }
+
+        .st10 {
+          font-size: 24px;
+        }
+
+        .st11 {
+          fill: #eaeaea;
+        }
+        .st12 {
+          font-family: 'Rock Salt', cursive;
+        }
+
+        .st13 {
+          font-size: 37.769px;
+        }
+      }
+      .front,
+      .back {
+        position: absolute;
+        width: 100%;
+        max-width: 400px;
+        -webkit-backface-visibility: hidden;
+        backface-visibility: hidden;
+        -webkit-font-smoothing: antialiased;
+        color: #47525d;
+      }
+      .cardfront,
+      .cardback {
+        width: 100%;
+        -webkit-box-shadow: 1px 5px 6px 0px black;
+        box-shadow: 1px 5px 6px 0px black;
+        border-radius: 22px;
+      }
+      .flip {
+        -webkit-transform: rotateY(180deg);
+        transform: rotateY(180deg);
       }
     }
   }
 }
 
-.container {
-  width: 100%;
-  max-width: 400px;
-  max-height: 251px;
-  height: 54vw;
-  padding: 20px;
-  -webkit-perspective: 800px;
-  perspective: 800px;
-  .creditcard {
-    -webkit-transform-style: preserve-3d;
-    transform-style: preserve-3d;
-    -webkit-transform: transform 1s;
-    -ms-transform: transform 1s;
-    transform: transform 1s;
-    .front {
-      -webkit-transform: rotateY(0deg);
-      -ms-transform: rotateY(0deg);
-      transform: rotateY(0deg);
-    }
-    .back {
-      -webkit-transform: rotateY(-180deg);
-      -ms-transform: rotateY(-180deg);
-      transform: rotateY(-180deg);
-    }
-  }
-}
-
-#ccsingle {
-  position: absolute;
-  right: 15px;
-  top: 20px;
-}
-
-#ccsingle svg {
-  width: 100px;
-  max-height: 60px;
-}
-
-.creditcard svg#cardfront,
-.creditcard svg#cardback {
-  width: 100%;
-  -webkit-box-shadow: 1px 5px 6px 0px black;
-  box-shadow: 1px 5px 6px 0px black;
-  border-radius: 22px;
-}
-
-#generatecard {
-  cursor: pointer;
-  float: right;
-  font-size: 12px;
-  color: #fff;
-  padding: 2px 4px;
-  background-color: #909090;
-  border-radius: 4px;
-  cursor: pointer;
-  float: right;
-}
-
-/* CHANGEABLE CARD ELEMENTS */
-.creditcard .lightcolor,
-.creditcard .darkcolor {
-  -webkit-transition: fill 0.5s;
-  transition: fill 0.5s;
-}
-
-.creditcard .lightblue {
-  fill: #03a9f4;
-}
-
-.creditcard .lightbluedark {
-  fill: #0288d1;
-}
-
-.creditcard .red {
-  fill: #ef5350;
-}
-
-.creditcard .reddark {
-  fill: #d32f2f;
-}
-
-.creditcard .purple {
-  fill: #ab47bc;
-}
-
-.creditcard .purpledark {
-  fill: #7b1fa2;
-}
-
-.creditcard .cyan {
-  fill: #26c6da;
-}
-
-.creditcard .cyandark {
-  fill: #0097a7;
-}
-
-.creditcard .green {
-  fill: #66bb6a;
-}
-
-.creditcard .greendark {
-  fill: #388e3c;
-}
-
-.creditcard .lime {
-  fill: #d4e157;
-}
-
-.creditcard .limedark {
-  fill: #afb42b;
-}
-
-.creditcard .yellow {
-  fill: #ffeb3b;
-}
-
-.creditcard .yellowdark {
-  fill: #f9a825;
-}
-
-.creditcard .orange {
-  fill: #ff9800;
-}
-
-.creditcard .orangedark {
-  fill: #ef6c00;
-}
-
-.creditcard .grey {
-  fill: #bdbdbd;
-}
-
-.creditcard .greydark {
-  fill: #616161;
-}
-
-/* FRONT OF CARD */
-#svgname {
-  text-transform: uppercase;
-}
-
-#cardfront .st2 {
-  fill: #ffffff;
-}
-
-#cardfront .st3 {
-  font-family: 'Source Code Pro', monospace;
-  font-weight: 600;
-}
-
-#cardfront .st4 {
-  font-size: 54.7817px;
-}
-
-#cardfront .st5 {
-  font-family: 'Source Code Pro', monospace;
-  font-weight: 400;
-}
-
-#cardfront .st6 {
-  font-size: 33.1112px;
-}
-
-#cardfront .st7 {
-  opacity: 0.6;
-  fill: #ffffff;
-}
-
-#cardfront .st8 {
-  font-size: 24px;
-}
-
-#cardfront .st9 {
-  font-size: 36.5498px;
-}
-
-#cardfront .st10 {
-  font-family: 'Source Code Pro', monospace;
-  font-weight: 300;
-}
-
-#cardfront .st11 {
-  font-size: 16.1716px;
-}
-
-#cardfront .st12 {
-  fill: #4c4c4c;
-}
-
-/* BACK OF CARD */
-#cardback .st0 {
-  fill: none;
-  stroke: #0f0f0f;
-  stroke-miterlimit: 10;
-}
-
-#cardback .st2 {
-  fill: #111111;
-}
-
-#cardback .st3 {
-  fill: #f2f2f2;
-}
-
-#cardback .st4 {
-  fill: #d8d2db;
-}
-
-#cardback .st5 {
-  fill: #c4c4c4;
-}
-
-#cardback .st6 {
-  font-family: 'Source Code Pro', monospace;
-  font-weight: 400;
-}
-
-#cardback .st7 {
-  font-size: 27px;
-}
-
-#cardback .st8 {
-  opacity: 0.6;
-}
-
-#cardback .st9 {
-  fill: #ffffff;
-}
-
-#cardback .st10 {
-  font-size: 24px;
-}
-
-#cardback .st11 {
-  fill: #eaeaea;
-}
-
-#cardback .st12 {
-  font-family: 'Rock Salt', cursive;
-}
-
-#cardback .st13 {
-  font-size: 37.769px;
-}
-
-/* FLIP ANIMATION */
-.container {
-  perspective: 1000px;
-}
-
-.creditcard {
-  width: 100%;
-  max-width: 400px;
-  -webkit-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-  transition: -webkit-transform 0.6s;
-  -webkit-transition: -webkit-transform 0.6s;
-  transition: transform 0.6s;
-  transition: transform 0.6s, -webkit-transform 0.6s;
-  cursor: pointer;
-}
-
-.creditcard .front,
-.creditcard .back {
-  position: absolute;
-  width: 100%;
-  max-width: 400px;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  -webkit-font-smoothing: antialiased;
-  color: #47525d;
-}
-.creditcard.back {
-  -webkit-transform: rotateY(180deg);
-  transform: rotateY(180deg);
-}
-.creditcard.flip {
-  -webkit-transform: rotateY(180deg);
-  transform: rotateY(180deg);
-}
+// .generatecard {
+//   float: right;
+//   font-size: 12px;
+//   color: #fff;
+//   padding: 2px 4px;
+//   background-color: #909090;
+//   border-radius: 4px;
+//   cursor: pointer;
+// }
