--- a/src/app/features/cart-management/checkout/recipt/recipt.component.html
+++ b/src/app/features/cart-management/checkout/recipt/recipt.component.html
@@ -66,7 +66,7 @@
     <br />
   </mat-card>
 </div>
-<mat-toolbar color="primary" class="checkout-button">
+<mat-toolbar color="primary" class="centre-button">
   <button mat-raised-button color="accent" (click)="downloadImage()">
     Download Recipt As Image
   </button>
