--- a/src/app/layout/homepage/page-content/category-tiles/category-tiles.component.scss
+++ b/src/app/layout/homepage/page-content/category-tiles/category-tiles.component.scss
@@ -1,9 +1,9 @@
-#wrap {
+.wrap {
   height: 50%;
   padding: 10px 80px 0px 80px;
   .product-list {
     margin: 25px;
-    .review-card--option-1 {
+    .review-card {
       // border: 1px solid #d8d8d8;
       border-radius: 10px;
       padding: 25px;
@@ -13,12 +13,15 @@
         background-color: #fff;
         box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14),
           0 3px 14px 2px rgba(0, 0, 0, 0.12);
+        transition-duration: 700ms;
+        transition-timing-function: ease;
+        transition-delay: 100ms;
       }
-    }
-    .review-card .review-card-img {
-      width: 100%;
-      height: 100%;
-      margin: 0 auto 15px;
+      .review-card-img {
+        width: 100%;
+        height: 100%;
+        margin: 0 auto 15px;
+      }
     }
   }
 }
