--- a/src/app/shared/quickview/quickview.component.scss
+++ b/src/app/shared/quickview/quickview.component.scss
@@ -1,22 +1,3 @@
-.containerr {
-  width: 100%;
-  /* padding-top: 0px; */
-  padding-right: 15px;
-  margin-top: -45px;
-  padding-left: 15px;
-  min-width: 1050px;
-  .mat-form-field {
-    width: 95%;
-  }
-}
-.info-container {
-  max-height: 395px !important;
-}
-// .action {
-//   position: relative;
-//   top: 30%;
-//   // left: 10%;
-// }
 .preview {
   display: -webkit-box;
   display: -webkit-flex;
@@ -27,11 +8,6 @@
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
-}
-.col-md-6 {
-  -ms-flex: 0 0 50%;
-  flex: 0 0 50%;
-  max-width: 50%;
 }
 @media screen and (max-width: 996px) {
   .preview {
@@ -109,7 +85,7 @@
     height: 50%;
   }
 }
-.cardd {
+.quick-view-card {
   background: #eee;
   // border: 2px solid;
   // border-color: rgb(0, 0, 0);
@@ -117,38 +93,8 @@
   line-height: 1.5em;
 }
 
-@media screen and (min-width: 997px) {
-  .wrapper {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-  }
-}
-
-.details {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
-}
-
-.colors {
-  -webkit-box-flex: 1;
-  -webkit-flex-grow: 1;
-  -ms-flex-positive: 1;
-  flex-grow: 1;
-}
-
 .product-title,
-.price,
-.sizes,
-.colors {
+.price {
   text-transform: UPPERCASE;
   font-weight: bold;
   color: black;
@@ -160,105 +106,13 @@
 }
 
 .product-title,
-.rating,
 .product-description,
-.price,
-.vote,
-.sizes {
+.price {
   margin-bottom: 15px;
 }
 
 .product-title {
   margin-top: 0;
-}
-
-.size {
-  margin-right: 10px;
-}
-
-.size:first-of-type {
-  margin-left: 40px;
-}
-
-.color {
-  display: inline-block;
-  vertical-align: middle;
-  margin-right: 10px;
-  height: 2em;
-  width: 2em;
-  border-radius: 2px;
-}
-
-.color:first-of-type {
-  margin-left: 20px;
-}
-
-.back {
-  background: #981aff;
-  border: none;
-  text-transform: UPPERCASE;
-  font-weight: bold;
-  color: #fff;
-  -webkit-transition: background 0.3s ease;
-  transition: background 0.3s ease;
-}
-.back:hover {
-  background: #9201b6;
-  color: #fff;
-}
-.add-to-cart:hover {
-  background: #001bb3;
-  color: #fff;
-}
-.like:hover {
-  background: #b30000;
-  color: #fff;
-}
-
-.add-to-cart {
-  background: #291aff;
-  border: none;
-  text-transform: UPPERCASE;
-  font-weight: bold;
-  color: #fff;
-  -webkit-transition: background 0.3s ease;
-  transition: background 0.3s ease;
-}
-.like {
-  background: #ff1a1a;
-  border: none;
-  text-transform: UPPERCASE;
-  font-weight: bold;
-  color: #fff;
-  -webkit-transition: background 0.3s ease;
-  transition: background 0.3s ease;
-}
-
-.not-available {
-  text-align: center;
-  line-height: 2em;
-}
-
-.not-available:before {
-  font-family: fontawesome;
-  content: '\f00d';
-  color: #fff;
-}
-
-.orange {
-  background: #ff9f1a;
-}
-
-.green {
-  background: #85ad00;
-}
-
-.blue {
-  background: #0076ad;
-}
-
-.tooltip-inner {
-  padding: 1.3em;
 }
 
 @-webkit-keyframes opacity {
