--- a/src/app/features/cart-management/checkout/recipt/recipt.component.html
+++ b/src/app/features/cart-management/checkout/recipt/recipt.component.html
@@ -1,15 +1,15 @@
-<div class="recipt-template" id="recipt" #recipt>
-  <mat-card class="recipt-card">
+<div class="input-template" id="recipt" #recipt>
+  <mat-card class="input-card box-elevation-z8">
     <mat-card-header>
       <mat-card-title>Recipt</mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <br /><br />
-      <div class="thanks-text">
+      <div class="centre-button">
         <h2>Thanks for your order!</h2>
       </div>
       <br />
-      <div class="thanks-text">
+      <div class="centre-button">
         <b><h3>December 7,2019</h3></b>
       </div>
       <div class="table-wrapper">
@@ -51,7 +51,7 @@
         </mat-table>
       </div>
       <br /><br />
-      <div fxLayout="row" class="billing" fxLayoutAlign="start">
+      <div fxLayout="row" fxLayoutAlign="start">
         <div fxFlex="50%" class="billing-section">
           <h3>Billed To</h3>
           <p>India</p>
