--- a/src/app/features/cart-management/view-cartitems/view-cartitems.component.html
+++ b/src/app/features/cart-management/view-cartitems/view-cartitems.component.html
@@ -109,7 +109,7 @@
     </div>
   </div> -->
 <div class="table-wrapper">
-  <mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+  <mat-table [dataSource]="dataSource" matSort class="box-elevation-z8">
     <ng-container matColumnDef="image">
       <mat-header-cell *matHeaderCellDef mat-sort-header>
         {{"user.product.image" | translate}}
