--- a/src/app/features/user-management/contact/contact.component.html
+++ b/src/app/features/user-management/contact/contact.component.html
@@ -1,6 +1,6 @@
 <app-navbar [isHidden]="true"></app-navbar>
-<div class="contact-template">
-  <mat-card class="input-card mat-elevation-z8">
+<div class="input-template">
+  <mat-card class="input-card box-elevation-z8">
     <mat-card-header>
       <mat-card-title>Contact Us</mat-card-title>
     </mat-card-header>
@@ -69,7 +69,7 @@
       <button
         mat-raised-button
         [disabled]="contactform.invalid"
-        class="signin-btn"
+        class="blue-btn"
         (click)="contact()"
       >
         SEND
