--- a/src/app/shared/description-viewer/description-viewer.component.html
+++ b/src/app/shared/description-viewer/description-viewer.component.html
@@ -1,5 +1,5 @@
 <div class="description-container">
-  <mat-card class="mat-elevation-z8">
+  <mat-card class="box-elevation-z8">
     <h2>Name : {{product.name}}</h2>
     <h3>CurrentPrice : {{product.price}}</h3>
     <mat-divider></mat-divider>
