--- a/src/app/shared/reviews-viewer/reviews-viewer.component.html
+++ b/src/app/shared/reviews-viewer/reviews-viewer.component.html
@@ -1,5 +1,5 @@
 <div class="review-container">
-  <mat-card class="mat-elevation-z8">
+  <mat-card class="box-elevation-z8">
     <mat-list>
       <div mat-subheader>{{totalreviewcount}} User Reviews</div>
       <mat-form-field appearance="outline">
