--- a/src/assets/css/shared-common.scss
+++ b/src/assets/css/shared-common.scss
@@ -58,3 +58,17 @@
   align-items: center;
   justify-content: center;
 }
+
+//--------------------------- Big Texts On Cards ------------------------------
+.display-text {
+  font-size: 20px;
+  &:hover {
+    color: rgb(103, 58, 183);
+    cursor: pointer;
+  }
+}
+//--------------------------- Background Effect on Table and cards ------------------------------
+.box-elevation-z8 {
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14),
+    0 3px 14px 2px rgba(0, 0, 0, 0.12) !important;
+}
