--- a/src/app/features/cart-management/checkout/recipt/recipt.component.scss
+++ b/src/app/features/cart-management/checkout/recipt/recipt.component.scss
@@ -1,75 +1,29 @@
-.recipt-template {
+.input-template {
   padding: 50px 150px 210px 150px;
-  // min-height: 1500px;
-  background-color: white !important;
-  .recipt-card {
-    // min-width: 300px;
-    // width: 1000px;
+  height: 100%;
+  .input-card {
     width: 100%;
     height: 100%;
-    &.mat-card:not([class*='mat-elevation-z']) {
-      box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.16), 0 3px 6px 0 rgba(0, 0, 0, 0.12);
-    }
+    min-width: 100%;
     &.mat-card {
-      padding: 0;
-      .thanks-text {
-        display: flex;
-        justify-content: center;
-      }
+      border-radius: 0px;
       .mat-card-header {
-        margin: 0;
-        background-color: #33b5e5;
-        justify-content: center;
+        border-top-left-radius: 0px;
+        border-top-right-radius: 0px;
         margin-bottom: 0px;
         .mat-card-title {
-          color: white;
-          position: relative;
-          height: 60px;
           font-size: 25px;
-          top: 15px;
+          top: 35px;
         }
       }
     }
   }
-  .table-wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 10px 70px 0px 50px;
-    background: #ffffff;
-    .mat-table {
-      background: #fbfbfb;
-      width: 100%;
-      padding: 0px 80px 0px 80px;
-      .product-image {
-        width: 50px;
-        height: 50px;
-      }
-      mat-row {
-        min-height: 60px;
-      }
-      .input-quantity {
-        font-size: 10px;
-        margin-top: 13px;
-        .search-field {
-          width: 100px;
-          .mat-input-element {
-            font-size: 14px;
-          }
-        }
-      }
-    }
-  }
-  .billing {
-    background-color: white;
-    .billing-section {
-      // background-color: white;
-      position: relative;
-      left: 17%;
-      p {
-        margin-top: 0px;
-        margin-bottom: 0rem !important;
-      }
+  .billing-section {
+    position: relative;
+    left: 17%;
+    p {
+      margin-top: 0px;
+      margin-bottom: 0rem !important;
     }
   }
 }
