--- a/src/app/features/user-management/profile/edit-profile/edit-profile.component.html
+++ b/src/app/features/user-management/profile/edit-profile/edit-profile.component.html
@@ -18,7 +18,7 @@
           </mat-card>
   </div>
   <div class="col-lg-6"> -->
-<div class="edit-container" fxLayout="row" fxLayoutAlign="start" fxLayoutGap="20px">
+<div class="profile-container" fxLayout="row" fxLayoutAlign="start" fxLayoutGap="20px">
   <div fxFlex="30%">
     <mat-card class="example-card">
       <mat-card-header>
@@ -38,7 +38,7 @@
     </mat-card>
   </div>
   <div fxFlex="70%">
-    <mat-card class="edit-profile-card">
+    <mat-card class="profile-card">
       <mat-card-title>{{"user.form_heading.edit_profile_details" | translate}}</mat-card-title>
       <mat-card-content>
         <form [formGroup]="editform" class="edit-form">
