--- a/src/assets/css/white-component.scss
+++ b/src/assets/css/white-component.scss
@@ -428,3 +428,61 @@
 .mat-select-panel {
   margin-left: 30px !important;
 }
+
+//----------------------- Cards Used in --------------------------------------
+//   1.Admin EditProfile
+//   2.User Profile
+
+.profile-container {
+  width: 100%;
+  min-height: 450px;
+  padding: 35px 85px 0px 85px;
+  .profile-card {
+    height: 100%;
+    width: 100%;
+    border-radius: 10px;
+    box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.1);
+    &:hover {
+      -webkit-box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.75);
+      -moz-box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14),
+        0 3px 14px 2px rgba(0, 0, 0, 0.12);
+      // transform: translateY(-2px);
+      transition-duration: 500ms;
+    }
+    .edit-form {
+      font-size: 13px;
+    }
+    .mat-form-field {
+      width: 100%;
+    }
+  }
+  .example-card {
+    height: 100%;
+    width: 100%;
+    max-width: 300px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.1);
+    .profile-image {
+      max-height: 260px;
+      margin: -3px -15px;
+      padding: 16px;
+      overflow: hidden;
+    }
+    .action-wrap {
+      padding: 50px 70px;
+      .mat-raised-button {
+        width: 170%;
+        height: 100px;
+      }
+    }
+    &:hover {
+      -webkit-box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.75);
+      -moz-box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14),
+        0 3px 14px 2px rgba(0, 0, 0, 0.12);
+      // transform: translateY(-2px);
+      transition-duration: 500ms;
+    }
+  }
+}
