--- a/src/app/shared/image-viewer/image-viewer.component.scss
+++ b/src/app/shared/image-viewer/image-viewer.component.scss
@@ -3,7 +3,7 @@
   height: 100%;
   padding: 18px 0px 0px 200px;
   min-height: 465px;
-  .example-card {
+  .profile-image-card {
     height: 100%;
     width: 100%;
     max-width: 800px;
