--- a/src/assets/css/white-component.scss
+++ b/src/assets/css/white-component.scss
@@ -457,7 +457,7 @@
       width: 100%;
     }
   }
-  .example-card {
+  .profile-image-card {
     height: 100%;
     width: 100%;
     max-width: 300px;
