--- a/src/app/features/user-management/profile/edit-profile/edit-profile.component.scss
+++ b/src/app/features/user-management/profile/edit-profile/edit-profile.component.scss
@@ -5,7 +5,7 @@
   .profile-card {
     max-height: 350px;
   }
-  .example-card {
+  .profile-image-card {
     width: 100%;
     max-height: 340px;
     max-width: 270px;
