--- a/src/app/features/user-management/profile/view-profile/view-profile.component.html
+++ b/src/app/features/user-management/profile/view-profile/view-profile.component.html
@@ -1,6 +1,6 @@
 <div class="profile-container" fxLayout="row" fxLayoutAlign="start center">
   <div fxFlex="40%">
-    <mat-card class="example-card">
+    <mat-card class="profile-image-card">
       <mat-card-header>
         <mat-card-title>{{"user.form.profile_pic" | translate}}</mat-card-title>
       </mat-card-header>
