--- a/src/app/shared/image-viewer/image-viewer.component.html
+++ b/src/app/shared/image-viewer/image-viewer.component.html
@@ -1,6 +1,6 @@
 <div class="profile-container" fxLayout="row" fxLayoutAlign="start">
   <div fxFlex="60%">
-    <mat-card class="profile-image-card">
+    <mat-card class="profile-image-card box-elevation-z8">
       <!-- <mat-card-header>
         <mat-card-title>{{"user.form.profile_pic" | translate}}</mat-card-title>
       </mat-card-header> -->
@@ -20,7 +20,7 @@
 
   <div fxFlex="40%" class="side-image">
     <ng-container *ngFor="let image of product">
-      <mat-card class="small-card" (click)="changeimage(image.imageurl)">
+      <mat-card class="small-card box-elevation-z8" (click)="changeimage(image.imageurl)">
         <div class="small-image">
           <img src="{{image.imageurl}}" />
         </div>
