--- a/src/app/shared/image-viewer/image-viewer.component.scss
+++ b/src/app/shared/image-viewer/image-viewer.component.scss
@@ -1,48 +1,28 @@
 .profile-container {
-  width: 100%;
   height: 100%;
   padding: 18px 0px 0px 200px;
-  min-height: 465px;
+  min-height: 450px;
   .profile-image-card {
-    height: 100%;
-    width: 100%;
     max-width: 800px;
-    max-height: 425px;
-    // max-height: 400px;
-    // max-height: 400px;
-    // border-radius: 10px;
-    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14),
-      0 3px 14px 2px rgba(0, 0, 0, 0.12);
+    max-height: 410px;
+    border-radius: 0px;
     .profile-image {
-      // max-height: 260px;
-      // margin: -3px -15px;
-      // padding: 16px;
       display: flex;
+      max-height: 100%;
+      margin: 0;
+      padding: 0;
       justify-content: center;
-      overflow: hidden;
       img {
         height: 400px !important;
       }
-    }
-    .action-wrap {
-      padding: 50px 70px;
-      .mat-raised-button {
-        width: 170%;
-        height: 100px;
-      }
-    }
-    &:hover {
-      // transform: translateY(-2px);
     }
   }
   .side-image {
     display: block;
     padding-left: 100px;
     .small-card {
-      max-height: 128px;
+      max-height: 120px;
       max-width: 130px;
-      box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14),
-        0 3px 14px 2px rgba(0, 0, 0, 0.12);
       .small-image {
         display: flex;
         justify-content: center;
