--- a/src/app/features/user-management/register/register.component.html
+++ b/src/app/features/user-management/register/register.component.html
@@ -1,5 +1,5 @@
 <div class="input-template">
-  <mat-card class="input-card">
+  <mat-card class="input-card box-elevation-z8">
     <mat-card-header>
       <mat-card-title>Register</mat-card-title>
     </mat-card-header>
