--- a/src/app/core/auth-management/login/login.component.html
+++ b/src/app/core/auth-management/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="input-template">
-  <mat-card class="input-card">
+  <mat-card class="input-card box-elevation-z8">
     <mat-card-header>
       <mat-card-title>{{"user.form.sign_in" | translate}}</mat-card-title>
     </mat-card-header>
