--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -6,6 +6,7 @@
   width: 100%;
   display: flex;
   justify-content: flex-end;
+  right: 0;
   height: 56px;
   box-shadow: 0 -1px 0 rgba(0, 0, 0, 0.08), 0 -2px 8px rgba(0, 0, 0, 0.12);
   padding: 11px 15px;
