--- a/src/app/features/admin-management/product-components/add-product/add-product.component.html
+++ b/src/app/features/admin-management/product-components/add-product/add-product.component.html
@@ -160,7 +160,7 @@
     </mat-card-content>
   </mat-card>
 </div>
-<mat-toolbar color="primary" class="c-bottom-action-bar order-button-wrap">
+<mat-toolbar color="primary" class="c-bottom-action-bar">
   <button id="btnSave" mat-flat-button (click)="AddProduct()">
     {{"admin.productform.save" | translate}}
   </button>
