--- a/src/app/features/user-management/profile/view-profile/view-profile.component.html
+++ b/src/app/features/user-management/profile/view-profile/view-profile.component.html
@@ -33,13 +33,23 @@
         </mat-form-field>
         <mat-form-field appearance="outline">
           <mat-label>{{"user.form.password" | translate}}</mat-label>
-          <input autocomplete="off" matInput readonly value="value" />
-          <mat-icon matSuffix>vpn_key</mat-icon>
-        </mat-form-field>
-        <mat-form-field appearance="outline">
-          <mat-label>{{"user.form.profile_pic" | translate}}</mat-label>
-          <input autocomplete="off" matInput readonly value="{{ userdata?.photoUrl }}" />
-          <mat-icon matSuffix>insert_photo</mat-icon>
+          <input
+            autocomplete="off"
+            matInput
+            [type]="hide ? 'password' : 'text'"
+            readonly
+            value="value"
+          />
+          <button
+            mat-icon-button
+            matTooltip="{{hide ? 'show' : 'hide'}}"
+            matTooltipPosition="left"
+            matSuffix
+            matSuffix
+            (click)="hide = !hide"
+          >
+            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+          </button>
         </mat-form-field>
       </mat-card-content>
     </mat-card>
