--- a/src/assets/css/white-component.scss
+++ b/src/assets/css/white-component.scss
@@ -462,6 +462,7 @@
     height: 100%;
     width: 100%;
     max-width: 300px;
+    // max-height: 340px;
     border-radius: 10px;
     box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.1);
     .profile-image {
