--- a/src/app/features/user-management/wish-list/wish-list.component.html
+++ b/src/app/features/user-management/wish-list/wish-list.component.html
@@ -88,8 +88,8 @@
     <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
   </mat-table>
 </div>
-<!-- <br /><br /><br /><br />
-<div class="table-bottom">
+<br /><br /><br /><br />
+<!-- <div class="table-bottom">
   <button mat-raised-button style="width: 40%;" [routerLink]="['/home']" color="primary">
     {{"user.cart.continue_shopping" | translate}}
   </button>
