--- a/src/assets/css/white-component.scss
+++ b/src/assets/css/white-component.scss
@@ -340,7 +340,8 @@
 //   2.User HomePage
 
 .space-medium {
-  padding: 24px 85px 0px 85px;
+  padding: 50px 85px 0px 85px;
+  min-height: 540px;
   .containerr {
     width: 100%;
     padding-right: 15px;
