--- a/src/app/features/admin-management/product-components/view-products/view-products.component.html
+++ b/src/app/features/admin-management/product-components/view-products/view-products.component.html
@@ -58,7 +58,7 @@
                     />
                   </mat-form-field>
                 </div> -->
-                {{ element.productqty }}
+                {{ element.quantity }}
               </td>
             </ng-container>
 
