--- a/src/app/shared/image-popup/image-popup.component.html
+++ b/src/app/shared/image-popup/image-popup.component.html
@@ -1,1 +1,3 @@
-<img class="bottom-image" src="{{ data.image[0].imageurl }}" />
+<div class="popup-image">
+  <img src="{{ data.image[0].imageurl }}" />
+</div>
