--- a/src/app/shared/image-popup/image-popup.component.scss
+++ b/src/app/shared/image-popup/image-popup.component.scss
@@ -1,5 +1,7 @@
-.bottom-image {
-  width: 350px;
-  height: 400px;
-  margin-left: 60px;
+.popup-image {
+  display: flex;
+  justify-content: center;
+  img {
+    height: 400px;
+  }
 }
