--- a/src/app/shared/list-products/list-products.component.html
+++ b/src/app/shared/list-products/list-products.component.html
@@ -4,11 +4,31 @@
       <div class="three six" *ngFor="let item of productitems index as i">
         <mat-card class="product-card">
           <mat-card-header>
-            <mat-card-title
-              ><div class="wishlist-icon">
-                <mat-icon (click)="addToWishlit(item)">favorite_border </mat-icon>
-              </div></mat-card-title
-            >
+            <mat-card-title>
+              <div class="wishlist-icon">
+                <button
+                  mat-icon-button
+                  matTooltip="add to wishlist"
+                  matTooltipPosition="above"
+                  (click)="addToWishlit(item)"
+                >
+                  <mat-icon>favorite_border </mat-icon>
+                </button>
+              </div>
+              <div class="compare-icon">
+                <ng-container *ngIf="compare">
+                  <button
+                    matTooltip="add to compare"
+                    matTooltipPosition="above"
+                    mat-icon-button
+                    color="warn"
+                    (click)="addtocompare(item)"
+                  >
+                    <mat-icon>compare_arrows</mat-icon>
+                  </button>
+                </ng-container>
+              </div>
+            </mat-card-title>
           </mat-card-header>
           <mat-card-content>
             <div class="product-img">
