--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,11 @@
   // min-height: 900px;
   min-height: 830px;
 }
+.chips {
+  top: 12%;
+  left: 4%;
+  position: absolute;
+}
 .mat-button-focus-overlay {
   background-color: transparent !important;
 }
