--- a/src/app/features/product-management/productcompare/productcompare.component.html
+++ b/src/app/features/product-management/productcompare/productcompare.component.html
@@ -1,37 +1,168 @@
 <app-navbar [isHidden]="true"></app-navbar>
 <app-jumbotron [Heading]="'user.main_heading.your_account'"></app-jumbotron>
-<div class="space-medium">
-  <div class="containerr">
-    <div class="roww">
-      <ng-container *ngFor="let item of list">
-        <div class="three-part">
-          <mat-card class="showcase-block">
-            <div fxLayout="row" fxLayoutAlign="start center">
-              <div fxFlex="40%">
-                <div>
-                  <img class="small-mobile-image" [src]="item.image[0].imageurl" />
+<app-spinner
+  *ngIf="dimmed"
+  style="position: absolute;left: 50%;top: 50%;"
+  [loading]="dataLoading"
+></app-spinner>
+<div [ngClass]="{ dimmed: dimmed }">
+  <div class="space-medium">
+    <div class="containerr">
+      <div class="roww">
+        <ng-container *ngFor="let item of list">
+          <div class="three-part">
+            <mat-card class="showcase-block">
+              <div fxLayout="row" fxLayoutAlign="start center">
+                <div fxFlex="40%">
+                  <div>
+                    <img class="small-mobile-image" [src]="item.image[0].imageurl" />
+                  </div>
+                </div>
+                <div fxFlex="60%">
+                  <div class="display-text">
+                    {{item.name}}
+                  </div>
+                  <br />
+                  <div class="compare-actions">
+                    <button color="accent" mat-raised-button>Add To Cart</button>
+                    &nbsp;&nbsp;
+                    <button color="warn" class="cancel" (click)="remove(item)" mat-raised-button>
+                      <mat-icon>close</mat-icon>
+                    </button>
+                  </div>
                 </div>
               </div>
-              <div fxFlex="60%">
-                <div class="display-text">
-                  {{item.name}}
-                </div>
-                <br />
-                <div class="compare-actions">
-                  <button color="accent" mat-raised-button>Add To Cart</button>
-                  &nbsp;&nbsp;
-                  <button color="warn" class="cancel" mat-raised-button>
-                    <mat-icon>close</mat-icon>
-                  </button>
-                </div>
-              </div>
-            </div>
-          </mat-card>
-        </div>
-      </ng-container>
+            </mat-card>
+          </div>
+        </ng-container>
+      </div>
     </div>
   </div>
-</div>
-<br /><br />
 
+  <div class="order-container">
+    <mat-accordion>
+      <ng-container>
+        <mat-expansion-panel>
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              General
+            </mat-panel-title>
+            <mat-panel-description></mat-panel-description>
+          </mat-expansion-panel-header>
+          <table mat-table [dataSource]="general">
+            <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay1">
+              <th mat-header-cell *matHeaderCellDef>{{column | uppercase}}</th>
+              <td mat-cell *matCellDef="let element">{{element[column]}}</td>
+            </ng-container>
+            <tr mat-header-row *matHeaderRowDef="columnsToDisplay1"></tr>
+            <tr mat-row *matRowDef="let row; columns: columnsToDisplay1;"></tr>
+          </table>
+        </mat-expansion-panel>
+        <br />
+        <mat-expansion-panel>
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              Display
+            </mat-panel-title>
+            <mat-panel-description></mat-panel-description>
+          </mat-expansion-panel-header>
+          <table mat-table [dataSource]="display">
+            <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay2">
+              <th mat-header-cell *matHeaderCellDef>{{column | uppercase}}</th>
+              <td mat-cell *matCellDef="let element">{{element[column]}}</td>
+            </ng-container>
+            <tr mat-header-row *matHeaderRowDef="columnsToDisplay2"></tr>
+            <tr mat-row *matRowDef="let row; columns: columnsToDisplay2;"></tr>
+          </table>
+        </mat-expansion-panel>
+        <br />
+        <mat-expansion-panel>
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              Design
+            </mat-panel-title>
+            <mat-panel-description></mat-panel-description>
+          </mat-expansion-panel-header>
+          <table mat-table [dataSource]="design">
+            <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay3">
+              <th mat-header-cell *matHeaderCellDef>{{column | uppercase}}</th>
+              <td mat-cell *matCellDef="let element">{{element[column]}}</td>
+            </ng-container>
+            <tr mat-header-row *matHeaderRowDef="columnsToDisplay3"></tr>
+            <tr mat-row *matRowDef="let row; columns: columnsToDisplay3;"></tr>
+          </table>
+        </mat-expansion-panel>
+        <br />
+        <mat-expansion-panel>
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              Battery
+            </mat-panel-title>
+            <mat-panel-description></mat-panel-description>
+          </mat-expansion-panel-header>
+          <table mat-table [dataSource]="battery">
+            <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay4">
+              <th mat-header-cell *matHeaderCellDef>{{column | uppercase}}</th>
+              <td mat-cell *matCellDef="let element">{{element[column]}}</td>
+            </ng-container>
+            <tr mat-header-row *matHeaderRowDef="columnsToDisplay4"></tr>
+            <tr mat-row *matRowDef="let row; columns: columnsToDisplay4;"></tr>
+          </table>
+        </mat-expansion-panel>
+        <br />
+        <mat-expansion-panel>
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              performance
+            </mat-panel-title>
+            <mat-panel-description></mat-panel-description>
+          </mat-expansion-panel-header>
+          <table mat-table [dataSource]="performance">
+            <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay5">
+              <th mat-header-cell *matHeaderCellDef>{{column | uppercase}}</th>
+              <td mat-cell *matCellDef="let element">{{element[column]}}</td>
+            </ng-container>
+            <tr mat-header-row *matHeaderRowDef="columnsToDisplay5"></tr>
+            <tr mat-row *matRowDef="let row; columns: columnsToDisplay5;"></tr>
+          </table>
+        </mat-expansion-panel>
+        <br />
+        <mat-expansion-panel>
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              Storage
+            </mat-panel-title>
+            <mat-panel-description></mat-panel-description>
+          </mat-expansion-panel-header>
+          <table mat-table [dataSource]="storage">
+            <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay6">
+              <th mat-header-cell *matHeaderCellDef>{{column | uppercase}}</th>
+              <td mat-cell *matCellDef="let element">{{element[column]}}</td>
+            </ng-container>
+            <tr mat-header-row *matHeaderRowDef="columnsToDisplay6"></tr>
+            <tr mat-row *matRowDef="let row; columns: columnsToDisplay6;"></tr>
+          </table>
+        </mat-expansion-panel>
+        <br />
+        <mat-expansion-panel>
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              Camera
+            </mat-panel-title>
+            <mat-panel-description></mat-panel-description>
+          </mat-expansion-panel-header>
+          <table mat-table [dataSource]="camera">
+            <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay7">
+              <th mat-header-cell *matHeaderCellDef>{{column | uppercase}}</th>
+              <td mat-cell *matCellDef="let element">{{element[column]}}</td>
+            </ng-container>
+            <tr mat-header-row *matHeaderRowDef="columnsToDisplay7"></tr>
+            <tr mat-row *matRowDef="let row; columns: columnsToDisplay7;"></tr>
+          </table>
+        </mat-expansion-panel>
+        <br />
+      </ng-container>
+    </mat-accordion>
+  </div>
+</div>
 <app-footer [position]="sticky"></app-footer>
