--- a/src/assets/css/shared-common.scss
+++ b/src/assets/css/shared-common.scss
@@ -33,6 +33,7 @@
 // -------------------------- Dim the background opacity -------------------------------
 .dimmed {
   opacity: 0.2;
+  // background: rgba(0, 0, 0, 0.15) !important;
 }
 //--------------------------- Admin Management Big Inputs ------------------------------
 
